// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should analyze absolute-import-path 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 2 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/image/1659821.jpeg - Failed to load resource: the server responded with a status of 404 (Not Found)
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/asset/script.js - Failed to load resource: the server responded with a status of 404 (Not Found)",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- /asset/image/1659821.jpeg Can you try importing this resource with a relative path ?
- /asset/script.js Can you try importing this resource with a relative path ?",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/f0d7fa6245ed0093b6f70c56a4a99b4c/index.html",
}
`;

exports[`should analyze blank-screen 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "failed",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/6d57c49a05ab7cae134184d357b3f9e3/index.html",
}
`;

exports[`should analyze error-on-run 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "details": "got 1 errors:
  http://<bucketName>.s3-website-eu-west-1.amazonaws.com/67a909f1347eb868eb38292744dcaea6/asset/script.js 7:10 Uncaught Error: something bad",
      "result": "failed",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/67a909f1347eb868eb38292744dcaea6/index.html",
}
`;

exports[`should analyze external-http-call-html 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "details": "got 2 forbidden requests:
- https://avatars0.githubusercontent.com/u/1659820?v=4
- https://github.com/platane.png",
      "result": "failed",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/143781ec38fbd4a01c23e923cac1ba08/index.html",
}
`;

exports[`should analyze index-not-in-root 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try moving \\"game/index.html\\" to the root of the zip ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze missing-index 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "details": "Can you try renaming \\"game.html\\" to \\"index.html\\" ?",
      "result": "failed",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "untested",
    },
    "game_no_error": Object {
      "result": "untested",
    },
    "game_no_external_http": Object {
      "result": "untested",
    },
  },
  "deployUrl": null,
}
`;

exports[`should analyze oversize-bundle 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "failed",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/c1742ac6a386249c4524df6fd80e8bde/index.html",
}
`;

exports[`should analyze valid 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/14da0cd2e4b0dcaef8fae192a35dd52a/index.html",
}
`;

exports[`should analyze valid-whitelisted-external 1`] = `
Object {
  "checks": Object {
    "bundle_contains_index": Object {
      "result": "ok",
    },
    "bundle_size": Object {
      "result": "ok",
    },
    "bundle_valid_zip": Object {
      "result": "ok",
    },
    "game_no_blank_screen": Object {
      "result": "ok",
    },
    "game_no_error": Object {
      "result": "ok",
    },
    "game_no_external_http": Object {
      "result": "ok",
    },
  },
  "deployUrl": "http://<bucketName>.s3-website-eu-west-1.amazonaws.com/1ccad7376e365d2272c05e60eb2253bc/index.html",
}
`;
